[project]
description = "Add your description here"
name = "anigamerplus"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

dependencies = [
  "termcolor",
  "flask",
  "requests",
  "chardet",
  "gevent",
  "flask_basicauth",
  "flask_sockets",
  "beautifulsoup4",
  "gevent_websocket",
  "pysocks",
  "lxml",
  "markupsafe",
  "greenlet",
  "pyhttpx",
]
