[project]
description = "Add your description here"
name = "anigamerplus"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

dependencies = [
  "termcolor>=3.1.0",
  "flask>=3.1.1",
  "requests>=2.32.4",
  "chardet>=5.2.0",
  "gevent>=25.5.1",
  "flask_basicauth>=0.2.0",
  "flask_sockets>=0.2.1",
  "beautifulsoup4>=4.13.4",
  "gevent_websocket>=0.10.1",
  "pysocks>=1.7.1",
  "lxml>=6.0.0",
  "markupsafe>=3.0.2",
  "greenlet>=3.2.4",
  "pyhttpx>=2.10.9",
]
